[package]
name = "nmlpack"
version = "2026.1.3"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
shlex = "1"
zip = { version = "7", default-features = false, features = ["deflate"] }
